2010-08-03  Anton Muhin  <antonm@chromium.org>

Reviewed by David Levin.

        [v8] Get current memory usage and make it available on stack before crashing due to out of memory
        https://bugs.webkit.org/show_bug.cgi?id=43426

        That should allow us to diagnose the cases when the process just ran out of memory
        and hence V8 failed to allocate more OS pages.

        * bindings/v8/V8DOMWindowShell.cpp:
        (WebCore::reportFatalErrorInV8):

Canonical link: https://commits.webkit.org/55394@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64572 268f45cc-cd09-0410-ab3c-d52691b4dbfc